# ImageRegistrationGP

./: .bashrc  .gitignore  CMakeLists.txt  DisplayImage.cpp  Makefile  README.md  benchmark.sh  colourTransform.cpp  eccMainExample.cpp  findTransform.cpp  findTransform_gauss.cpp  generateCMake.py  gpuwarpAffine.cpp  image_alignment_modified.cpp
AlgorithmsForBenchmarking/gpu/: finalexe  findTransformV3.cpp  out.txt
Benchmarking/: benchmark.sh  makefile  nvidia-smi_queries.txt  power mmt.xlsx  sorting  sorting.cpp
Benchmarking/Results/CPU/: 128x120_fruits_output.txt  160x150_fruits_output.txt  192x180_fruits_output.txt  256x240_fruits_output.txt  288x270_fruits_output.txt  320x300_fruits_output.txt  32x30_fruits_output.txt  352x330_fruits_output.txt  384x360_fruits_output.txt  416x390_fruits_output.txt  448x420_fruits_output.txt  480x450_fruits_output.txt  496x465_fruits_output.txt  512x480_fruits_output.txt  64x60_fruits_output.txt  96x90_fruits_output.txt  CPU_gprof.txt  CPU_time_vs_resolution.ods  watts_vs_time.odc
Benchmarking/Results/ECCResults/: fullImage630Data.csv  fullImageCPUData.txt  fullImageTitanData.csv  fullTX1Data.csv  gaussImage630Data.csv  gaussImageCPUData.txt  gaussImageTitanData.csv  gaussTX1Data.csv
Benchmarking/gprof_sample/: CMakeLists.txt  sorting.cpp
Benchmarking/lowres_findTransform/: CMakeLists.txt  bash_timer.sh  lowres_findTransform  lowres_findTransform.cpp  lowres_findTransform_V2  lowres_findTransform_V2.cpp  transformed
Benchmarking/power_gadget/: Test1.ods  power_gadget  rapl.c
FFT and LPF/: Makefile  fft_lpf  fft_lpf.cpp  fft_lpf.d  lpf_only.cpp
FFT and LPF/lpf/: lpf_cpu  lpf_cpu.cpp  lpf_cpu.d
FFT and LPF/lpf/drafts/: fft_lpf.cpp
Parallella/: scalar_matrix_multiply_cpu.cpp
Parallella/Documents/: Epiphany bandwidth test.txt
Parallella/hello/: Makefile  data_struct.h  host.c
Parallella/pedagogicalExamples/assembly-opt/src/: defs_multi.h  e_dev_main.c  host_multi.c
Parallella/pedagogicalExamples/hello/: epiphany.c  main
Parallella/pedagogicalExamples/image_to_cores/: data_struct.h  ep2.cpp  host.c
Parallella/pedagogicalExamples/image_to_cores/fft-based/: run.sh
Parallella/pedagogicalExamples/image_to_cores/fft-based/clean/: build.sh  multirun.sh  run.sh
Parallella/pedagogicalExamples/image_to_cores/fft-based/device/src/: fft2d.h  fft2d_main.c  fft2dlib.c
Parallella/pedagogicalExamples/image_to_cores/fft-based/host/Release/: matprt.m
Parallella/pedagogicalExamples/image_to_cores/fft-based/host/src/: fft2d_host.c
Parallella/pedagogicalExamples/lena/: build.sh
Parallella/pedagogicalExamples/lena/device/src/: fft2d_main.c
Parallella/pedagogicalExamples/lena/host/Release/: matprt.m
Parallella/pedagogicalExamples/lena/host/src/: fft2d_host.c
Parallella/pedagogicalExamples/matvecmult/: compile.sh  matvecmult_host.c  matvecmult_kern.cl  run.sh
Parallella/scalar_mult/clean/: README.txt
Parallella/scalar_mult/clean/device/src/: calc_16_internal.ldf  calclib.c  calclib.h  dmalib.c  epiphany.h  epiphany_main.c  static_buffers.c  static_buffers.h
Parallella/scalar_mult/clean/host/src/: host.c
Testing/: hello  hello.cpp  hello.h  makefile  test_hello.cpp
findTransform/: CMakeLists.txt  findTransform  findTransform.cpp  output.txt
findTransform/AnnotatedECC/: CMakeLists.txt  findTransformStreamlinedECC.cpp
findTransform/Unit_Testing/: CMakeLists.txt  saveWarp.cpp  saveWarp.h  test_findTransform.cpp  test_saveWarp.cpp  unit_test
findTransform_gauss/: CMakeLists.txt  findTransform_gauss  findTransform_gauss.cpp  output
gpu_translation/: dotproduct  eccAlgorithm_gpu.d  eccAlgorithm_gpu_V.1.0.cpp  findTransformV3  findTransformV3.cpp  findTransformV3.d  findTransform_V1.0.cpp  findTransform_V2.0.cpp  findTransform_V2.1.cpp  maxdot.cpp  maxdot.d  output.txt  precomp.hpp  testdot.cpp
gpu_translation/cpuFilter/: CMakeLists.txt  filter  testingFilter.cpp
gpu_translation/findTransformBranch/: findTransform_V2.2.cpp
gpu_translation/gpuFilter/: testFilter_gpu.d  testingFilter2.cpp
gpu_translation/gpuFilter/findTransformBranch/: finalexe  findTransformV2.2.cpp  findTransformV2b.cpp  findTransformV3.1.cpp  findTransformV3.1.gcno  findTransformV3.cpp  findTransformV3_Timed_FullData.cpp  findTransformV3_Timed_Gauss.cpp  main.cpp  maxdot  maxdot.cpp
gpu_translation/gpuFilter/findTransformBranch/gpuECCCode/: README.md
gpu_translation/gpuFilter/findTransformBranch/gpuECCCode/gauss/: Makefile  main.cpp
gpu_translation/gpuFilter/findTransformBranch/gpuECCCode/nongauss/: findTransformV3Full.cpp  findTransformV3Full.h  main.cpp
gpu_translation/gpuFilter/findTransformBranch/gpuECCCode/withoutTimers/: Makefile  findTransformV3.cpp  findTransformV3.h
gpu_translation/gpuFilter/findTransformBranch/lcov/: ex_test.info  findTransformV2.2.gcda  findTransformV3.1.gcda  findTransformV3.gcda  findTransformV3.gcno
gpu_translation/gpuFilter/findTransformBranch/lcov/res/: #gcov.css#  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
gpu_translation/objects/: dot.d  findTransform_V2.0.d  findTransform_V2.1.d  meanstd.d  testdot.d
image_generator/: CMakeLists.txt  affineTransform  affineTransform.cpp
sample_CMakeLists/: CMakeLists.txt
saveWarp/: saveWarp.cpp  saveWarp.h
tar/: README.md
tar/Parallella/: README.txt
tar/Parallella/scalar_mult/: multirun.sh  run.sh
tar/Parallella/scalar_mult/host/Release/: placeholder.txt
tar/ScalarMatrixMult/Parallella/scalar_mult/: README.txt  run.sh
tar/ScalarMatrixMult/sclar-matrix_gpu_cpu/: README.txt  bash_loop_cpu.sh  bash_loop_gpu.sh  cpu_makefile  gpu_makefile  scalar_matrix_multiply_cpu.cpp  scalar_matrix_multiply_gpu.cpp
tar/cpuECCCode/: README.md
tar/cpuECCCode/findTransform/: CMakeLists.txt
tar/gpuECCCode/: README.md
tar/gpuECCCode/gauss/: Makefile  findTransformV3Gauss.cpp  findTransformV3Gauss.h  main.cpp
tar/gpuECCCode/nongauss/: Makefile  findTransformV3Full.cpp  findTransformV3Full.h  main.cpp
tar/gpuECCCode/withoutTimers/: findTransformV3.cpp  findTransformV3.h  main.cpp  main.d  out.txt
(+109 files in other folders)
